add redmi
